# tauri-raycast

./: README.md  package.json
apps/client/: index.html  package.json  vite.config.ts
apps/client/src/: routeTree.gen.ts  router.tsx  styles.css
apps/client/src/routes/: __root.tsx
apps/client/src/routes/(root)/: index.tsx
apps/client/src/routes/popover/: index.tsx
apps/client/src/tauri/components/Titlebar/: index.tsx
apps/client/src/utils/: fs.ts
apps/client/src/webviews/panel/: index.tsx
apps/client/src/webviews/tray/: index.tsx
apps/client/src/window/popover/: index.tsx
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/src/: commands.rs  lib.rs  macos.rs  macos_bridge.rs  main.rs
tauri/swift-bridge/Sources/SwiftBridge/: haptics.swift  tooltip.swift
tauri/swift-library/Sources/swift-library/: apple_intelligence_glow.swift  tray_popover.swift  window_as_panel.swift  window_as_popover.swift
